use Character.valueOf(char) instead of new Character(char)